# Qml-cmake-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/assets/fonts/: fonts.qrc
src/cpp/: CMakeLists.txt  fileio.h  main.cpp  platform.h
src/cpp/platform/: CMakeLists.txt
src/qml/: loader.qml  main.qml
src/qml/component/: IconButton.qml  IconToolButton.qml  Ionicon.qml  component.qrc  qmldir
test/: CMakeLists.txt  main.cpp  test_factorial.cpp  testmain.cpp
